# crowdbot_active_slam

./: CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  install.sh  nodelet_plugins.xml  package.xml  run_pepper_SLAM.sh  run_pepper_SLAM_dyn.sh  run_pepper_SLAM_dyn_realsense.sh  run_pepper_SLAM_exploration.sh  run_pepper_SLAM_exploration_dyn.sh  run_pepper_SLAM_exploration_dyn_realsense.sh  run_pioneer_SLAM.sh  run_pioneer_exploration.sh  run_pioneer_exploration_dyn_sim.sh  run_turtlebot3_SLAM.sh
config/: diff_drive.yaml  icp_cfg.yaml  laser_filter.yaml
include/: decision_maker.h  frontier_exploration.h  graph_optimisation.h  graph_optimisation_nodelet.h  kalman_filter.h  object_detector.h  pedestrian.h  remove_people_from_pcl.h  static_laser_scan_combiner.h  static_laser_scan_combiner_nodelet.h  static_scan_extractor.h  static_scan_extractor_nodelet.h  tracked_object.h  utils.h
launch/: SLAM_nodelets.launch  combined_laser_scans.launch  decision_maker.launch  frontier_exploration_service.launch  graph_optimisation.launch  graph_optimisation_pepper.launch  graph_optimisation_scientifica.launch  graph_optimisation_turtlebot.launch  move_base.launch  move_base_pepper.launch  move_base_pepper_realsense.launch  pedestrian_simulator.launch  pioneer_gazebo.launch  remove_people_from_pcl.launch  scan_matcher.launch  scan_matcher_pepper.launch  static_scan_extractor.launch  static_scan_extractor_pepper.launch
matlab/mprim/: pioneer.mprim
nav/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_dynamic.yaml  costmap_common_params_static.yaml  global_costmap_params.yaml  local_costmap_params.yaml  pepper_base_local_planner_params.yaml  pepper_costmap_common_params_dynamic.yaml  pepper_costmap_common_params_static.yaml  pepper_global_costmap_params.yaml  pepper_local_costmap_params.yaml  pepper_realsense_costmap_common_params_dynamic.yaml  pepper_realsense_costmap_common_params_static.yaml
rviz/: crowdbot_active_slam.rviz  turtlebot.rviz
src/: combined_laser_scans.cpp  decision_maker.cpp  frontier_exploration.cpp  graph_optimisation.cpp  graph_optimisation_nodelet.cpp  helper.cpp  kalman_filter.cpp  object_detector.cpp  pedestrian.cpp  pedestrian_simulator.cpp  remove_people_from_pcl.cpp  static_laser_scan_combiner.cpp  static_laser_scan_combiner_nodelet.cpp  static_scan_extractor.cpp  static_scan_extractor_nodelet.cpp  tracked_object.cpp  utils.cpp
srv/: current_pose.srv  get_frontier_list.srv  get_map.srv  map_recalculation.srv  service_call.srv  utility_calc.srv
test_results/scripts/: calculate_SDF_error.cpp  calculate_map_error.cpp  get_SDF.cpp  plot_SDF.cpp  plot_SDF_diff.cpp  plot_cov_along_path.cpp  pub_map_difference.cpp
urdf/: pedestrian.xacro
worlds/: closed_maze.world  empty_world.world  lab.world  rand_box_cylinder.world  rand_boxes.world  utm_0.world
worlds/sdf_maps/: sdf_map_closed_maze_2000x2000.txt  sdf_map_lab_2000x2000.txt  sdf_map_rand_box_cylinder_2000x2000.txt  sdf_map_rand_boxes_2000x2000.txt  sdf_map_utm_0_2000x2000.txt
