<package>
  <name>crowdbot_active_slam</name>
  <version>0.1.0</version>
  <description>crowdbot_active_slam</description>
  <maintainer email="dmammolo@student.ethz.ch">Dario Mammolo</maintainer>

  <license>BSD</license>

  <author email="dmammolo@student.ethz.ch">Dario Mammolo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
