<package format="2">
  <name>crowdbot_active_slam</name>
  <version>0.1.0</version>
  <description>crowdbot_active_slam</description>
  <maintainer email="dmammolo@student.ethz.ch">Dario Mammolo</maintainer>

  <license>BSD</license>

  <author email="dmammolo@student.ethz.ch">Dario Mammolo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>csm</depend>
  <depend>cmake_modules</depend>
  <build_depend>message_generation</build_depend>
  <depend>plotty</depend>
  <depend>pcl_ros</depend>
  <depend>glog_catkin</depend>
  <depend>grid_map_ros</depend>
  <depend>nodelet</depend>
  <depend>laser_geometry</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
